--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 bcrypt==3.2.0
 blinker==1.4
+cachelib==0.1.1
 cffi==1.14.5
 click==7.1.2
 dnspython==2.1.0
@@ -7,6 +8,7 @@ email-validator==1.1.2
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Mail==0.9.1
+Flask-Session==0.3.2
 Flask-WTF==0.14.3
 idna==3.1
 itsdangerous==1.1.0
