--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bcrypt==3.2.0
+bleach==3.3.0
 blinker==1.4
 cachelib==0.1.1
 cffi==1.14.5
@@ -14,8 +15,14 @@ idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
+packaging==20.9
 psycopg2==2.8.6
+pycodestyle==2.7.0
 pycparser==2.20
+pyflakes==2.3.1
+pyparsing==2.4.7
 six==1.15.0
+webencodings==0.5.1
 Werkzeug==1.0.1
 WTForms==2.3.3
